GNOME Bugzilla – Bug 726927
Popover glitch
Last modified: 2014-03-24 13:25:19 UTC
Created attachment 272702 [details] popoverTotem Seems that the popover of the gear icon paints some area over the header bar. See attached screeenshot
Created attachment 272753 [details] [review] Revert all totem_set_popover_no_shadow() bits Since GTK+ commit eb0f86d48, this hack is no longer necessary as GtkPopover sets invariably a more fitting shape.
It seems there was a communication problem down the line :(. Reassigning to totem.
Review of attachment 272753 [details] [review]: Missing removal in src/Makefile.am
Created attachment 272778 [details] [review] all: Revert all totem_set_popover_no_shadow() bits Since GTK+ commit eb0f86d48, this hack is no longer necessary as GtkPopover sets invariably a more fitting shape.
Created attachment 272779 [details] [review] all: Revert all totem_set_popover_no_shadow() bits Since GTK+ commit eb0f86d48, this hack is no longer necessary as GtkPopover sets invariably a more fitting shape.
Attachment 272779 [details] pushed as d732c0b - all: Revert all totem_set_popover_no_shadow() bits