all: Revert all totem_set_popover_no_shadow() bits

Since GTK+ commit eb0f86d48, this hack is no longer necessary as
GtkPopover sets invariably a more fitting shape.

https://bugzilla.gnome.org/show_bug.cgi?id=726927